--- a/react-frontend/ping-react-frontend/package.json
+++ b/react-frontend/ping-react-frontend/package.json
@@ -8,17 +8,30 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
     "daisyui": "^2.15.4",
+    "electron": "^19.0.7",
+    "electron-rpc": "^2.0.1",
+    "is-electron": "^2.2.1",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "main": "electron-starter.js",
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
+    "start": "npm run watch:css && react-app-rewired start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
