--- a/react-frontend/ping-react-frontend/package.json
+++ b/react-frontend/ping-react-frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "daisyui": "^2.15.4",
     "electron": "^19.0.7",
     "electron-rpc": "^2.0.1",
